# Inwentaryzacja

./: .gitignore  1.bootstrap_linux.sh  1.bootstrap_windows.ps1  2.build_qt_mysql_plugin_linux.sh  2.build_qt_mysql_plugin_windows.ps1  3.build_inwentaryzacja_linux.sh  3.build_project_windows.ps1  4.deploy_windows.ps1  5.run_inwentaryzacja_windows.ps1  6.make_deb_linux.sh  7.make_dmg_macos.sh  CHANGELOG.md  CMakeLists.txt  DatabaseConfigDialog.cpp  DatabaseConfigDialog.h  Doxyfile  Inwentaryzacja.pro  Inwentaryzacja.pro.user.18d6284  Inwentaryzacja.pro.user.f8037fe  ItemFilterProxyModel.cpp  ItemFilterProxyModel.h  LICENSE  Makefile  README.md  RELEASE_NOTES_v1.3.0-beta.1.md  Refactor-Inwentaryzacja.ps1  boostrap_mac_silicon.sh  bootstrap.sh  bootstrap.sh.old  bootstrap_linux.sh  bootstrap_mac.sh  bootstrap_mac_x86.sh  bootstrap_windows.ps1  bootstrap_windows.ps1.oryg  check_ids.sql  copy_libs_to_project.sh  createTable.sql  database_example_record.sql  deb.sh  deploy_debug.bat  (+54 more)
.claude/: session-context.md
.github/workflows/: build-installers-v2.yml  build-installers.yml
ci/: Inwentaryzacja.iss  build-qt-mysql-plugin-macos.sh  package-debian.sh  package-macos.sh  package-windows.ps1
cmake/: README.md  bootstrap.bat  cmake  vcpkg.json
docs/: audit-2026-04-26-deep-itemrepo-backup.md  audit-2026-04-26-desktop.md  v1.5-ai-enrichment-rfc.md
documentation/: DatabaseConfigDialog_cpp.md  DatabaseConfigDialog_h.md  ItemFilterProxyModel_cpp.md  ItemFilterProxyModel_documentation.md  ItemFilterProxyModel_h.md  fullscreenphotoviewer_cpp.md  fullscreenphotoviewer_h.md  itemList_cpp.md  itemList_documentation.md  itemList_h.md  main.md  mainwindow_cpp.md  mainwindow_h.md  models_cpp.md  models_h.md  photoitem_cpp.md  photoitem_h.md  status_cpp.md  status_h.md  storage_cpp.md  storage_h.md  types_cpp.md  types_h.md  utils_cpp.md  utils_h.md  vendors_cpp.md  vendors_h.md
dokumentacja_doxygen/docbook/: _database_config_dialog_8cpp.xml  _database_config_dialog_8h.xml  _database_config_dialog_8h_source.xml  _item_filter_proxy_model_8cpp.xml  _item_filter_proxy_model_8h.xml  _item_filter_proxy_model_8h__incl.md5  _item_filter_proxy_model_8h_source.xml  annotated.xml  class_database_config_dialog.xml  class_database_config_dialog_a5336cc0a9b114cd604fbbbd8e8900d00_icgraph.md5  class_database_config_dialog_a9fbb43790eb73a2213a24ea8f46b7b0d_icgraph.md5  class_database_config_dialog_aad109fe645f948ace8242edeb70d8a67_icgraph.md5  class_full_screen_photo_viewer.xml  class_item_filter_proxy_model.xml  class_item_filter_proxy_model__coll__graph.md5  class_main_window.xml  class_main_window__inherit__graph.md5  class_main_window_a996c5a2b6f77944776856f08ec30858d_cgraph.md5  class_photo_item.xml  class_ui_1_1_database_config_dialog.xml  class_ui_1_1_main_window.xml  class_ui_1_1item_list.xml  class_ui_1_1item_list__coll__graph.md5  class_ui_1_1models.xml  class_ui_1_1models__coll__graph.md5  class_ui_1_1status.xml  class_ui_1_1storage.xml  class_ui_1_1types.xml  class_ui_1_1vendors.xml  class_ui___database_config_dialog.xml  class_ui___main_window.xml  class_ui__item_list.xml  class_ui__models.xml  class_ui__models__inherit__graph.md5  class_ui__status.xml  class_ui__status__inherit__graph.md5  class_ui__storage.xml  class_ui__types.xml  class_ui__vendors.xml  class_ui__vendors__inherit__graph.md5  (+95 more)
dokumentacja_doxygen/html/: _database_config_dialog_8cpp.html  _database_config_dialog_8cpp__incl.map  _database_config_dialog_8cpp__incl.md5  _database_config_dialog_8h.html  _database_config_dialog_8h.js  _database_config_dialog_8h__dep__incl.map  annotated.html  (+341 more)
forms/: DatabaseConfigDialog.ui  PreviewDialog.ui  itemList.ui  mainwindow.ui  models.ui  status.ui  storage.ui  types.ui  vendors.ui
images/: icon.qrc  ikona_mac.icns  resources.qrc
include/: AiEnrichmentService.h  DatabaseBackupService.h  DatabaseConfigDialog.h  DatabaseMigration.h  DictionaryRepository.h  EnrichPreviewDialog.h  ItemFilterProxyModel.h  ItemFormValidator.h  ItemRepository.h  PacmanAnimationModel.h  PacmanOverlay.h  PhotoService.h  PreviewDialog.h  fullscreenphotoviewer.h  itemList.h  mainwindow.h  models.h  photoitem.h  status.h  storage.h  types.h  utils.h  vendors.h
macos_lib_sql/: libcrypto.1.1.dylib  libqsqlite.dylib
scripts_build_debian/: 1.bootstrap_linux.sh  2.build_qt_mysql_plugin_linux.sh  3.build_inwentaryzacja_linux.sh  4.deploy_linux.sh  5.run_inwentaryzacja_linux.sh  6.make_deb_linux.sh  README.md
scripts_build_macos_universal/: 1.bootstrap_macos_universal.sh  2.build_qt_mysql_plugin_macos_universal.sh  3.sanitize_qt_sql_plugins_macos_universal.sh  4.build_inwentaryzacja_macos_universal.sh  5.deploy_macos_universal.sh  6.run_inwentaryzacja_macos_universal.sh  7.make_dmg_macos_universal.sh  8.restore_qt_sql_plugins_macos_universal.sh  9.clean_all_macos_universal.sh  PODSUMOWANIE_TESTOWANIE.md  QUICK_START.sh  README.md  test_bootstrap.sh
scripts_build_macos_ventura/: 1.bootstrap_macos.sh  2.build_qt_mysql_plugin_macos.sh  3.sanitize_qt_sql_plugins_macos.sh  4.build_inwentaryzacja_macos.sh  5.deploy_macos.sh  6.run_inwentaryzacja_macos.sh  7.make_dmg_macos.sh  8.restore_qt_sql_plugins_macos.sh  README.md
scripts_build_windows/: 1.bootstrap_windows.ps1  2.build_qt_mysql_plugin_windows.ps1  3.build_project_windows.ps1  4.deploy_windows.ps1  5.run_inwentaryzacja_windows.ps1  6.build_interbase_windows.ps1  6.make_installer_windows.ps1  7.make_installer_windows.ps1  7.upload_installer_windows.ps1  README.md
src/: AiEnrichmentService.cpp  DatabaseBackupService.cpp  DatabaseConfigDialog.cpp  DatabaseMigration.cpp  DatabaseSchemaUtils.cpp  DictionaryRepository.cpp  EnrichPreviewDialog.cpp  ItemFilterProxyModel.cpp  ItemFormValidator.cpp  ItemRepository.cpp  PacmanAnimationModel.cpp  PacmanOverlay.cpp  PhotoService.cpp  PreviewDialog.cpp  fullscreenphotoviewer.cpp  itemList.cpp  main.cpp  mainwindow.cpp  models.cpp  photoitem.cpp  status.cpp  storage.cpp  types.cpp  utils.cpp  vendors.cpp
styles/: amiga.qss  amiga13.qss  atari8bit.qss  default.qss  geos.qss  zxspectrum.qss
tests/: repository_tests.cpp
(+537 files in other folders)
